# tratech-backend

./: .gitignore  README.md  alembic.ini  app.py  db.db  pyproject.toml
app/: dependencies.py  main.py
app/api/: admin.py  courses.py  lessons.py  modules.py  users.py
app/auth/: dependencies.py
app/core/: auth.py  config.py  dependencies.py
app/db/: database.py
app/db/models/: __init__.py  course.py  lesson.py  module.py  user.py
app/models/: user.py
app/schemas/: admin.py  course.py  invites.py  lesson.py  module.py  user.py
app/services/: admin.py  course.py  file_exports.py  lesson.py  module.py  user.py
app/utils/: image_upload.py
migrations/: env.py
migrations/versions/: 0050b0465b65_added_course_and_module_fields.py  05334bdba572_deployed_migration.py  47fe63aa1f15_added_user_table.py  8971da312157_redo.py  af2308c5c9d9_modified_users.py  c6fde81cd60d_added_course_and_module_fields.py  d4cdebdbc6c7_updated_users.py
