[project]
name = "tratechbackend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "clerk-backend-api>=4.2.0",
    "fastapi[standard]>=0.124.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "python-slugify>=8.0.4",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.45",
    "svix>=1.83.0",
]
